--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@ __pycache__/
 node_modules/
 .github/
 cloudinary_python.txt
-
+SECRET_KEY = 'django-insecure-^inq!h42!vgg=#mn8&27y)d8lf!-u3!l$70ax0t!fu%a6+k612'
 
 django1/
