--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 cloudinary==1.36.0
 dj3-cloudinary-storage==0.0.6
 Django==5.0.6
+django-summernote==0.8.20.0
 gunicorn==20.1.0
 pillow==10.3.0
 sqlparse==0.5.0
