--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 asgiref==3.8.1
 cloudinary==1.40.0
-dj-database-url==2.2.0
+dj-database-url==0.5.0
 Django==5.0.6
 django-allauth==0.63.3
 django-cloudinary-storage==0.3.0
 django-summernote==0.8.20.0
 gunicorn==20.1.0
 pillow==10.3.0
+psycopg2==2.9.9
 sqlparse==0.5.0
 whitenoise==6.7.0
