--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cloudinary==1.40.0
 dj-database-url==0.5.0
 Django==5.0.6
 django-allauth==0.63.3
+django-autoslug==1.9.9
 django-cloudinary-storage==0.3.0
 django-summernote==0.8.20.0
 gunicorn==20.1.0
