--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
-cloudinary==1.40.0
+cloudinary==1.36.0
 dj-database-url==0.5.0
+dj3-cloudinary-storage==0.0.6
 Django==5.0.6
 django-allauth==0.63.3
 django-autoslug==1.9.9
@@ -10,4 +11,5 @@ gunicorn==20.1.0
 pillow==10.3.0
 psycopg2==2.9.9
 sqlparse==0.5.0
+urllib3==1.26.19
 whitenoise==6.7.0
